# zenmetrics

./: .dockerignore  .gitignore  .railwayignore  CHANGELOG.md  CLAUDE.md  COMMERCIAL.md  CONTEXT-HANDOFF.md  Cargo.deploy.toml  Cargo.toml  Dockerfile.split  Dockerfile.sweep  Dockerfile.sweep.salad.v1  Dockerfile.sweep.v13  Dockerfile.sweep.v14  Dockerfile.sweep.v15  Dockerfile.sweep.v18  Dockerfile.sweep.v19  Dockerfile.sweep.v21  Dockerfile.sweep.v22  Dockerfile.sweep.v23  Dockerfile.sweep.v24  Dockerfile.sweep.v25  Dockerfile.sweep.v26  Dockerfile.sweep.v27  README.crates.md  README.md  fleet-tools.json  ghcr-packages.json  justfile  railway.json
crates/burn-conv-spike/: Cargo.toml  README.md
crates/burn-conv-spike/src/: kernel.rs  main.rs
crates/burn-ranknet-spike/: Cargo.toml  README.md
crates/burn-ranknet-spike/src/: main.rs
crates/butteraugli-gpu/: Cargo.toml  HANDOFF.md  PORT_STATUS.md  README.md
crates/butteraugli-gpu/benchmarks/: butter_setref_clean_2026-05-29.tsv  gpu_vram_sweep_2026-05-28.tsv  vram_leak_check_2026-05-29.tsv  vram_leak_check_2026-05-29_per_cycle.pointer.md
crates/butteraugli-gpu/docs/: VRAM_LEAK_CHECK_2026-05-29.md
crates/butteraugli-gpu/examples/: batch_parity.rs  bench_dim_switch.rs  bench_multires_strip_vs_whole_cuda.rs  bench_staging_block.rs  bench_strip_vs_whole_cuda.rs  bench_strip_wall_task158.rs  bench_t4_warm.rs  bench_three_way.rs  bench_warm_ref.rs  blur_parity.rs  coldstart_one.rs  colors_parity.rs  diffmap_inspect.rs  end_to_end.rs  mem_one_size.rs  options_smoke.rs  parity_real_image.rs  parity_vs_cpu.rs  print_capabilities.rs  reduction_parity.rs  setref_timing.rs  strip_hf_diag.rs  strip_parity_numbers.rs  vram_leak_check.rs  w44_recon_a7_timing.rs
crates/butteraugli-gpu/src/: lib.rs  memory_mode.rs  opaque.rs  pipeline.rs  pipeline_batch.rs  session.rs  strip.rs
crates/butteraugli-gpu/tests/: memory_mode.rs  multires_strip.rs  opaque.rs  opaque_strip_parity.rs  reduction_parity.rs  set_reference_from_linear_planes.rs  strip_hf_checkerboard.rs  strip_parity.rs  vram_no_leak.rs
crates/cvvdp/: Cargo.toml  README.md
crates/cvvdp-conformance/: Cargo.toml
crates/cvvdp-conformance/src/: displays.rs  lib.rs  situations.rs
crates/cvvdp-conformance/tests/: conformance.rs
crates/cvvdp-cpu/: Cargo.toml  README.md
crates/cvvdp-cpu/benchmarks/: cvvdp_cpu_alloc_profile_baseline_2026-05-25.tsv  cvvdp_cpu_alloc_profile_recycle_2026-05-25.tsv  cvvdp_cpu_perf_baseline_2026-05-25.tsv  cvvdp_cpu_simd_masking_2026-05-25.tsv  cvvdp_cpu_simd_sigma3_2026-05-25.tsv  cvvdp_cpu_size_sweep_baseline_2026-05-25.tsv  cvvdp_cpu_size_sweep_recycle_2026-05-25.tsv  zensim_perf_target_2026-05-25.tsv
crates/cvvdp-cpu/docs/: CVVDP_CONFORMANCE.md  SIMD_CHAIN_AGENT_BRIEF.md  SIMD_EQUIVALENCE.md  SIMD_OPTIMIZATION_PLAN.md  UPSTREAM_DIVERGENCES.md  UPSTREAM_PARITY_AUDIT.md
crates/cvvdp-cpu/examples/: alloc_profile.rs  bench_one_mode.rs  time_csf_paired_ab.rs  time_masking_paired_ab.rs  time_size_sweep.rs
crates/cvvdp-cpu/src/: color.rs  csf.rs  diffmap.rs  lib.rs  masking.rs  pipeline.rs  pool.rs  pyramid.rs  scratch.rs  simd_math.rs  simd_pyramid.rs
crates/cvvdp-cpu/tests/: diffmap_invariants.rs  parity_against_host_scalar.rs  parity_corpus.rs  pixels_integration.rs  simd_equivalence.rs  upstream_parity_extended.rs
crates/cvvdp-gpu/: Cargo.toml  README.md
crates/cvvdp-gpu/benches/: score.rs
crates/cvvdp-gpu/benchmarks/: cvvdp_mode_b_walker_2026-05-26.csv  diffmap_overhead_2026-05-24.tsv  gpu_vram_peak_2026-05-28.tsv  gpu_vram_sweep_2026-05-28.tsv  pycvvdp_12mp_cuda_2026-05-14.md  pycvvdp_parity_tick175_2026-05-15.md  time_12mp_2026-05-14.md  time_12mp_tick145_2026-05-14.md  time_12mp_tick150_2026-05-14.md  time_12mp_tick156_2026-05-14.md  time_12mp_tick157_2026-05-14.md  time_12mp_tick158_2026-05-14.md  time_12mp_tick165_2026-05-14.md  time_12mp_tick166_2026-05-14.md  time_12mp_tick169_2026-05-14.md  time_12mp_tick171_warm_ref_2026-05-14.md  time_12mp_tick96_2026-05-14.md  time_size_sweep_tick149_2026-05-14.md  time_size_sweep_tick164_2026-05-14.md  time_size_sweep_tick97_2026-05-14.md  vram_isolation_spike_2026-05-30.txt  wgpu_isolation_spike_2026-05-30.txt
crates/cvvdp-gpu/data/: display_models.json
crates/cvvdp-gpu/docs/: AUDIT_2026-05-28.md  BURN_PORT_PLAN.md  CHROMA_DRIFT_INVESTIGATION.md  CVVDP_SIDECAR_SCHEMA.md  DIFFMAP_DIVERGENCES.md  DISPLAY_SPECS.md  MODE_SELECTION.md  NAN_ON_IDENTICAL_INPUT.md  PORT_STATUS.md  STRIP_PROCESSING.md
crates/cvvdp-gpu/examples/: bench_4096_one_mode.rs  bench_warm_ref.rs  cap_memory_estimate.rs  cap_perf_compare.rs  capped_levels_sweep.rs  chroma_shift_drift_probe.rs  coldstart_one.rs  cvvdp_mem_table.rs  diffmap_overhead.rs  manifest_parity_probe.rs  mem_estimate_tsv.rs  mem_mode_b_vs_full.rs  mem_one_size.rs  parity_iphone_eval.rs  parity_iphone_eval_gpu.rs  score_two_displays.rs  time_12mp.rs  time_size_sweep.rs  vram_isolation_spike.rs  wgpu_isolation_spike.rs
crates/cvvdp-gpu/src/: heatmap.rs  host_scalar.rs  lib.rs  memory_mode.rs  opaque.rs  (+4 more)
crates/dssim-gpu/: Cargo.toml  PORT_STATUS.md  README.md
crates/iwssim/: Cargo.toml  README.md  build.rs
crates/iwssim-filter-codegen/: Cargo.toml
crates/iwssim-gpu/: Cargo.toml  build.rs
crates/metal-diffmap-repro/: Cargo.toml  UPSTREAM_REPORT.md  generated_wgsl.txt
crates/ssim2-gpu/: Cargo.toml  HANDOFF.md  PORT_STATUS.md  README.md  build.rs
crates/vastai-fleet/: Cargo.toml
crates/zen-cloud-core/: Cargo.toml
crates/zen-cloud-local/: Cargo.toml
crates/zen-cloud-s3/: Cargo.toml
crates/zen-cloud-salad/: Cargo.toml  SALAD.md
crates/zen-cloud-vastai/: Cargo.toml
crates/zen-jobctl/: Cargo.toml
crates/zen-jobdash/: Cargo.toml  Dockerfile  railway.toml
crates/zen-jobworker/: Cargo.toml  Dockerfile  Dockerfile.executor  fleet-entrypoint.sh
crates/zen-metrics-cli/: Cargo.toml
crates/zen-sweep-worker/: Cargo.toml
crates/zenfleet-core/: Cargo.toml
crates/zenfleet-ctl/: Cargo.toml
crates/zenfleet-dash/: Cargo.toml  Dockerfile  railway.toml
crates/zenfleet-hetzner/: Cargo.toml
crates/zenfleet-ledger/: Cargo.toml
(+1737 files in other folders)
