[workspace]
members = [
    "crates/butteraugli-gpu",
    "crates/cvvdp",
    "crates/cvvdp-conformance",
    "crates/cvvdp-gpu",
    "crates/dssim-gpu",
    "crates/iwssim",
    "crates/iwssim-filter-codegen",
    "crates/iwssim-gpu",
    "crates/ssim2-gpu",
    "crates/zen-cloud-core",
    "crates/zen-cloud-local",
    "crates/zen-cloud-runpod",
    "crates/zen-cloud-s3",
    "crates/zen-cloud-salad",
    "crates/zen-cloud-vastai",
    "crates/zen-sweep-worker",
    "crates/zen-metrics-cli",
    "crates/zenmetrics-api",
    "crates/zenmetrics-corpus",
    "crates/zenmetrics-orchestrator",
    "crates/zenfleet-orchestrator",
    "crates/zensim-gpu",
    "crates/zenstats",
    "benchmarks/heaptrack/drivers/cpu_profile",
    "benchmarks/heaptrack/drivers/gpu_vram_profile",
]
# Excluded: burn-conv-spike is a standalone perf-spike crate that
# pins cubecl 0.10.0 stable (cubek-convolution doesn't accept
# 0.10.0-pre.4). It has its own [workspace] root so it doesn't
# pull workspace settings either.
exclude = [
    "crates/burn-conv-spike",
]
resolver = "2"

[workspace.package]
authors = ["Imazen <support@imazen.io>"]
homepage = "https://github.com/imazen/zenmetrics"
repository = "https://github.com/imazen/zenmetrics"
edition = "2024"
rust-version = "1.93"

[workspace.dependencies]
# Workspace member crates (in-tree).
butteraugli-gpu = { version = "0.0.1", path = "crates/butteraugli-gpu", default-features = false }
cvvdp = { version = "0.1.0", path = "crates/cvvdp", default-features = false }
cvvdp-gpu = { version = "0.0.1", path = "crates/cvvdp-gpu", default-features = false }
dssim-gpu = { version = "0.0.1", path = "crates/dssim-gpu", default-features = false }
iwssim = { version = "0.1.0", path = "crates/iwssim", default-features = false }
iwssim-filter-codegen = { version = "0.0.1", path = "crates/iwssim-filter-codegen" }
iwssim-gpu = { version = "0.0.1", path = "crates/iwssim-gpu", default-features = false }
ssim2-gpu = { version = "0.0.1", path = "crates/ssim2-gpu", default-features = false }
zensim-gpu = { version = "0.0.1", path = "crates/zensim-gpu", default-features = false }
zenmetrics-api = { version = "0.0.1", path = "crates/zenmetrics-api", default-features = false }
zenmetrics-corpus = { version = "0.1.0", path = "crates/zenmetrics-corpus", default-features = false }
zenmetrics-orchestrator = { version = "0.0.1", path = "crates/zenmetrics-orchestrator", default-features = false }
zenfleet-orchestrator = { version = "0.0.1", path = "crates/zenfleet-orchestrator" }
zen-cloud-core = { version = "0.0.1", path = "crates/zen-cloud-core", default-features = false }
zen-cloud-local = { version = "0.0.1", path = "crates/zen-cloud-local", default-features = false }
zen-cloud-runpod = { version = "0.0.1", path = "crates/zen-cloud-runpod", default-features = false }
zen-cloud-s3 = { version = "0.0.1", path = "crates/zen-cloud-s3", default-features = false }
zen-cloud-salad = { version = "0.0.1", path = "crates/zen-cloud-salad", default-features = false }
zen-cloud-vastai = { version = "0.0.1", path = "crates/zen-cloud-vastai", default-features = false }

# CubeCL — single source of truth for the GPU backend version.
#
# Phase 8f (2026-05-27): switched from `git = "lilith/cubecl"` rev pins
# to crates.io publication via the `imazen/zenforks-cubecl` rename.
#   - 11 renamed crates (zenforks-cubecl-*) at 0.10.1 ship pinned-upload
#     + PTX cache widening + Metal Atomic<f32> capability honesty patches.
#   - 5 non-renamed crates (cubecl-common, cubecl-ir, cubecl-macros,
#     cubecl-macros-internal, cubecl-zspace) come from upstream
#     tracel-ai/cubecl crates.io publication unchanged.
# The [lib] name = "cubecl_*" shim in each renamed crate keeps source
# code paths like `use cubecl_runtime::*` resolving without changes.
# See ../zenforks-cubecl-work/ZENFORKS_README.md for the full strategy.
cubecl         = { package = "zenforks-cubecl",         version = "0.10.1", default-features = false, features = ["std"] }
cubecl-runtime = { package = "zenforks-cubecl-runtime", version = "0.10.1", default-features = false }
cubecl-core    = { package = "zenforks-cubecl-core",    version = "0.10.1", default-features = false }
cubecl-cuda    = { package = "zenforks-cubecl-cuda",    version = "0.10.1", default-features = false }
cubecl-cpu     = { package = "zenforks-cubecl-cpu",     version = "0.10.2", default-features = false }
cubecl-wgpu    = { package = "zenforks-cubecl-wgpu",    version = "0.10.1", default-features = false }
cubecl-hip     = { package = "zenforks-cubecl-hip",     version = "0.10.1", default-features = false }
cubecl-cpp     = { package = "zenforks-cubecl-cpp",     version = "0.10.1", default-features = false }
# Non-renamed leaves stay on upstream's crates.io publication:
cubecl-common  = "0.10.0"
cubecl-ir      = "0.10.0"

# CPU reference crates used by parity tests.
butteraugli = { version = "0.9.3" }
dssim-core = { version = "3.4", default-features = false }
ssimulacra2 = { version = "0.5" }
zensim = { version = "0.3.0" }

# Common deps.
archmage = { version = "0.9.23", features = ["macros", "avx512"] }
magetypes = { version = "0.9.23", features = ["avx512"] }
bytemuck = "1"
clap = { version = "4", default-features = false, features = ["color", "derive", "error-context", "help", "std", "usage", "wrap_help"] }
csv = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
imgref = "1"
indicatif = "0.17"
rgb = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# Release profile — thin LTO + 16 codegen-units + line-tables-only debug.
#
# Why not `lto = "fat"` here:
#   - Fat LTO loads every CGU of every workspace member into a single
#     LLVM context during the final crate's link. With this workspace
#     (12 members, cubecl multi-backend, zenpixels, image codecs) plus
#     `debug = "full"` + `codegen-units = 1`, peak RSS during the
#     workspace-wide link routinely exceeded the 16 GB available on
#     `ubuntu-latest` GitHub runners. The CI workspace build was
#     gated off with `&& false` (ci.yml:55, since commit 4a729b65 on
#     2026-05-05) for exactly this reason.
#   - Thin LTO keeps ~85% of fat LTO's optimization wins (cross-CGU
#     inlining, dead-code elimination, devirtualization) but does the
#     work per-CGU rather than in one giant module, capping peak RSS.
#   - `debug = "line-tables-only"` instead of `"full"` keeps backtrace
#     line numbers (what `whereat` and panic reports need) without
#     dragging every DWARF DIE through the LTO link — that's the
#     other half of the OOM equation. Drop to `"none"` for even
#     smaller link memory if backtraces aren't needed.
#   - `codegen-units = 16` is the cargo default for release. With thin
#     LTO it lets LLVM parallelise the per-CGU optimisation passes.
#
# Need maximum optimisation for a shipping binary? Use `--profile
# release-fat` below. Benchmarks already opt into fat LTO via
# `[profile.bench]`.
[profile.release]
opt-level = 3
lto = "thin"
debug = "line-tables-only"
split-debuginfo = "packed"
codegen-units = 16

# Fat-LTO release profile for production binaries on memory-rich
# hosts (the 7950X workstation, vast.ai builders). Same shape as the
# old `[profile.release]` minus `debug = "full"` (debug=full + fat LTO
# was the OOM trigger; full debuginfo on a release artefact is rarely
# what you actually want — split it out via `split-debuginfo` or use
# `--profile release-debug` if you really need it).
#
# Usage:
#   cargo build --profile release-fat -p zen-metrics-cli
#   cargo build --profile release-fat --workspace
[profile.release-fat]
inherits = "release"
lto = "fat"
codegen-units = 1
debug = "line-tables-only"

# Full-debuginfo release profile for `perf record` / heaptrack /
# callgrind sessions. Don't use this on CI runners — `debug = "full"`
# is what made the workspace-wide release link OOM on ubuntu-latest.
[profile.release-debug]
inherits = "release"
debug = "full"

[profile.bench]
opt-level = 3
lto = "fat"
debug = false
codegen-units = 1

# zensim 0.2.8 isn't on crates.io yet — pin to the main-branch commit
# that adds `compute_extended_features` (needed by the sweep
# subcommand's --feature-output sidecar). Drop this once 0.2.8 ships.
#
# jxl-encoder 0.3.2 (imazen/jxl-encoder#30 — two OOB index DoS
# fixes in entropy_coding/lz77.rs and vardct/patches.rs) is also
# not on crates.io yet — pinning to the main-branch commit that
# contains the merged fix so sweep workers stop crashing at the
# ~17% rate observed in v08/v09/v11. Drop this patch once 0.3.2
# publishes. Same patch applies transitively to zenjxl, which
# pulls jxl-encoder via Cargo.toml.
#
# 2026-05-18 (EXP-MULTI-CODEC): bumped from cb5d9e4 → 6b8eefc1 to
# pick up W44-1..W44-45 bench-driven RD changes on main. User
# explicitly requested "latest main jxlencoder which has a
# different rd than stored data" so the multi-codec sweep
# re-collects with the post-W44 RD curves rather than reusing
# the pre-W44 cached sidecars.
[patch.crates-io]
# Local sibling of the canonical zensim repo. The feat/principled-activity
# branch landed on main weeks ago — the previous path-pin to
# ../zensim--principled-activity was carrying a stale checkout that
# would drift behind canonical on every push. Pointing at
# ../zensim/zensim (canonical main) means a `jj git fetch` in the
# zensim repo bubbles up to zenmetrics builds automatically.
#
# Equivalent git ref (use when the sibling checkout is gone):
#   { git = "https://github.com/imazen/zensim", rev = "<commit>" }
zensim = { path = "../zensim/zensim" }
# 2026-05-19: switched codec deps from crates.io + git-rev to local
# sibling worktrees so we always pick up in-flight improvements.
# User confirmed: "jxl encoder local has been improved, verify no
# crates.io codecs are used." These [patch.crates-io] entries
# substitute path deps for any workspace crate that depends on the
# corresponding crates.io version.
#
#   ~/work/zen/zenpng      (0.1.4)
#   ~/work/zen/zenwebp     (0.4.5)
#   ~/work/zen/zenavif     (0.1.6 — git tip; verify before next release)
#   ~/work/zen/zenjxl      (0.2.1 — git tip post 9ac0cd5a)
#   ~/work/zen/jxl-encoder (post 6b8eefc1 + local improvements)
#
# zenjpeg already uses an explicit `path = ../../../zenjpeg/zenjpeg`
# in zen-metrics-cli/Cargo.toml so it's not patched here.
zenpng       = { path = "../zenpng" }
zenwebp      = { path = "../zenwebp" }
# zenavif: pointed at ~/work/zen/zenavif--main, a worktree of the
# zenavif main branch (HEAD 37a529e). The default zenavif checkout
# at ../zenavif is on docs/speed6-tx-rdo-opt-in which removed
# `pub mod expert` + `__expert` feature. main retains both.
zenavif      = { path = "../zenavif--main" }
# zenjxl: pointed at ~/work/zen/zenjxl--main (worktree of main,
# HEAD 9ac0cd5). The default ../zenjxl checkout sits on
# pr-7-review which predates the AnimationParams/AnimationFrame
# API bump for jxl-encoder 0.3.2 — codec.rs struct literals don't
# match the new field shape. main has the fix.
zenjxl       = { path = "../zenjxl--main" }
jxl-encoder  = { path = "../jxl-encoder/jxl-encoder" }
# butteraugli: the local sibling at ~/work/butteraugli/butteraugli is
# version 0.9.2 but carries `compare_linear_planar_into` (the recycled-
# buffer planar-compare production path) which the PUBLISHED crates.io
# 0.9.2 does NOT expose. jxl-encoder (patched above) calls it from its
# vardct perceptual backend (perceptual_backend.rs:637); without this
# patch the workspace unifies on crates.io 0.9.2 and the jxl-encoder
# build fails `no method compare_linear_planar_into`. This points
# zenmetrics at the SAME local sibling jxl-encoder's own Cargo.toml uses
# (../../butteraugli/butteraugli from each repo root), so the whole
# workspace resolves one butteraugli. Equivalent git ref when the
# sibling checkout is gone: { git = "https://github.com/imazen/butteraugli", rev = "<commit>" }.
butteraugli  = { path = "../../butteraugli/butteraugli" }
# Phase 8f (2026-05-27): cubecl-* deps moved from [patch.crates-io] git
# pins to [workspace.dependencies] package aliases at the top of this
# file. The zenforks-cubecl-* crates.io publication makes the workspace-
# dependency form sufficient; [patch.crates-io] is no longer needed.
